Ticket #28150: Added style to fixate not overflowing parts.

--- a/com.top_logic.themes.core/src/main/webapp/style/form.css
+++ b/com.top_logic.themes.core/src/main/webapp/style/form.css
@@ -2761,6 +2761,11 @@ img.ddwttItemIcon {
 	overflow: visible;
 }
 
+.ddwttTag.ddwttOverflow img.ddwttItemIcon,
+.ddwttTag.ddwttOverflow .ddwttTagX {
+	align-self: start;
+	margin-top: var(--spacing-02);
+}
 
 .ddwttTagX {
 	width: .875rem;
